--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     }
 
 </style>
+<title>Video Music</title>
 <body>
 <script src="http://d3js.org/d3.v4.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
