--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Video Music</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <noscript>Your browser does not support JavaScript</noscript>
 </head>
 
@@ -11,8 +11,8 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/queue.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v1.min.js"></script>
-    <script src="d3-tip.js"></script>
-    <script src="app.js"></script>
+    <script src="js/d3-tip.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
