--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://d3js.org/queue.v1.min.js"></script>
-    <script src="https://d3js.org/topojson.v1.min.js"></script>
+    <script src="http://d3js.org/d3.v4.min.js"></script>
+    <script src="http://d3js.org/queue.v1.min.js"></script>
+    <script src="http://d3js.org/topojson.v1.min.js"></script>
+    <script type="text/javascript" src="https://www.youtube.com/iframe_api"></script>
+    <script src="js/d3-tip.js"></script>
     <script src="js/app.js"></script>
+    <div id="player"></div>
 </body>
 
 </html>
