--- a/chart.html
+++ b/chart.html
@@ -67,7 +67,7 @@
             .attr('class', 'd3-tip')
             .offset([-10, 0])
             .html(function (d) {
-                return "<strong>Frequency:</strong> <span style='color:red'>" + d.total + "</span>";
+                return "<strong>Total:</strong> <span style='color:red'>" + d.total + "</span>";
             })
 
         var svg = d3.select("body").append("svg")
@@ -100,7 +100,7 @@
                 .attr("y", 6)
                 .attr("dy", ".71em")
                 .style("text-anchor", "end")
-                .text("Frequency");
+                .text("Total");
 
             svg.selectAll(".bar")
                 .data(data)
