--- a/chart.html
+++ b/chart.html
@@ -24,14 +24,14 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand">Music Map</a>
+            <a class="navbar-brand">Vinagirls</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html">Top Music Video
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="chart.html">Top Genre</a>
                 </li>
 
@@ -78,13 +78,13 @@
 
         svg.call(tip);
         console.log("CHART")
-        d3.json("json/chart.json", function (error, data) {
+        d3.json("json/chart.json", function (error, data) {// trích dẫn file json
             console.log(data);
             x.domain(data.map(function (d) {
-                return d.genre;
+                return d.genre; // x Achse là Genre
             }));
             y.domain([0, d3.max(data, function (d) {
-                return d.total;
+                return d.total; // y Achse
             })]);
 
             svg.append("g")
