--- a/Oceania.html
+++ b/Oceania.html
@@ -27,7 +27,7 @@
             <a class="navbar-brand">Music Map</a>
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.php">Top Music Video
+                    <a class="nav-link" href="index.html">Top Music Video
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
