--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                  <li class="nav-item active">
+                    <a class="nav-link" ><img src ="image/logo.jpg" width="30px" height="30px"></a>
+                  </li>
                   <a class="navbar-brand">Vinagirls</a>
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                   
                     <li class="nav-item active">
                       <a class="nav-link" href="index.html">Top Music Video <span class="sr-only">(current)</span></a>
                     </li>
