--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                  <li class="nav-item active">
-                    <a class="nav-link" ><img src ="image/logo.jpg" width="30px" height="30px"></a>
-                  </li>
-                  <a class="navbar-brand">Vinagirls</a>
+                  
+                  <a class="navbar-brand"><img src ="image/logo.jpg" width="30px" height="30px"> &nbsp; Music Map</a>
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                    
                     <li class="nav-item active">
