--- a/Asia.html
+++ b/Asia.html
@@ -24,29 +24,31 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <li class="nav-item active">
-                <a class="nav-link" ><img src ="image/logo.jpg" width="30px" height="30px"></a>
-              </li>
-              <a class="navbar-brand">Music Map</a>
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item active">
+                    <a class="navbar-brand">
+                        <img src="image/logo.jpg" width="30px" height="30px"> &nbsp; Music Map</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Top Music Video
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Top Genre
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="chart.html">World</a>
-                            <a class="dropdown-item" href="Asia.html">Asia</a>
-                            <a class="dropdown-item" href="Americas.html">Americas</a>
-                            <a class="dropdown-item" href="Afrika.html">Afrika</a>
-                            <a class="dropdown-item" href="Europa.html">Europa</a>
-                            <a class="dropdown-item" href="Polar.html">Polar</a>
-                            <a class="dropdown-item" href="Oceania.html">Oceania</a>                    </div>
+                        <a class="dropdown-item" href="chart.html">World</a>
+                        <a class="dropdown-item" href="Asia.html">Asia</a>
+                        <a class="dropdown-item" href="Americas.html">Americas</a>
+                        <a class="dropdown-item" href="Afrika.html">Afrika</a>
+                        <a class="dropdown-item" href="Europa.html">Europa</a>
+                        <a class="dropdown-item" href="Polar.html">Polar</a>
+                        <a class="dropdown-item" href="Oceania.html">Oceania</a>
+                    </div>
                 </li>
 
             </ul>
