--- a/Polar.html
+++ b/Polar.html
@@ -24,10 +24,13 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand">Music Map</a>
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="navbar-brand">
+                                <img src="image/logo.jpg" width="30px" height="30px"> &nbsp; Music Map</a>
+                        </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.php">Top Music Video
+                    <a class="nav-link" href="index.html">Top Music Video
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
