--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                   
-                  <a class="navbar-brand"><img src ="image/logo.jpg" width="30px" height="30px"> &nbsp; Music Map</a>
-                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="navbar-brand">
+                                <img src="image/logo.jpg" width="30px" height="30px"> &nbsp; Music Map</a>
+                        </li>
                    
                     <li class="nav-item active">
                       <a class="nav-link" href="index.html">Top Music Video <span class="sr-only">(current)</span></a>
