--- a/chart.html
+++ b/chart.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="chart2.html">Top Genre</a>
+                    <a class="nav-link" href="chart.html">Top Genre</a>
                 </li>
             </ul>
         </div>
