--- a/chart.html
+++ b/chart.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-12">
                 <div id="bar"></div>
-                <div id="myDiv">Top Genre in: </div>
+                <div id="myDiv">Top Genre in: </div> <!--Dropdown fuer Country-Selectbox unten den Barchart-->
             </div>
         </div>
     </div>
