--- a/chart2.html
+++ b/chart2.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!--Navbar von Bootstrap-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -39,10 +40,12 @@
             </ul>
         </div>
     </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div id="bar"></div>
+                <!--siehe mehr in chart.js bei Dropdown Countries-->
                 <div id="myDiv">Top Genre in: </div>
             </div>
         </div>
