--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
@@ -35,6 +36,7 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                <!-- Chart-Seite verlinken -->
                 <li class="nav-item">
                     <a class="nav-link" href="chart.html">Top Genre</a>
                 </li>
